# dir-mover

./: APPDATA_FEATURE_SUMMARY.md  ARCHITECTURE.md  Dockerfile  components.d.ts  docker-compose.yml  package.json  pnpm-lock.yaml  vite.config.prod.ts  vite.config.ts
.github/workflows/: release.yml
.spec-workflow/: session.json
.spec-workflow/approvals/steering/: approval_1758594726431_p40jw8bqy.json  approval_1758596173442_b6gfajbr2.json  approval_1758596508319_lv3yks4yl.json  approval_1758596519140_zdjz10svm.json
.spec-workflow/steering/: product.md  structure.md  tech.md
docs/: README.md  deployment_guide.md  error_codes.md  faq.md  operation_guide.md  quick_start.md  user_manual.md
scripts/: build.bat  build.sh
src/: App.vue  main.ts
src-tauri/: Cargo.prod.toml  Cargo.toml  tauri.conf.json  tauri.conf.prod.json
src-tauri/src/: appdata_analyzer.rs  disk_analyzer.rs  error_recovery.rs  file_operations.rs  lib.rs  logger.rs  main.rs  migration_service.rs  operation_logger.rs  performance_optimizer.rs  types.rs
src-tauri/src/tests/: appdata_analyzer_tests.rs  appdata_performance_tests.rs  e2e_tests.rs  integration_tests.rs  mod.rs  performance_tests.rs  test_utils.rs  unit_tests.rs
src/components/: AppDataScanner.vue  ContextMenu.vue  DirectoryTree.vue  ErrorRecoveryMonitor.vue  MigrationDialog.vue  OperationLogViewer.vue  PerformanceMonitor.vue  ScanProgress.vue  TestManager.vue
src/services/: RealTimeDataManager.ts  api.ts
src/types/: appdata.ts  directory.ts  realtime.ts
src/utils/: DynamicSortingEngine.ts  formatters.ts
(+11 files in other folders)
